Refactor activity card rendering and remove unused script file

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -16,19 +16,7 @@
       <section id="activities-container">
         <h3>Available Activities</h3>
         <div id="activities-list">
-          <!-- Activities will be loaded here -->
-          <p>Loading activities...</p>
-          <div class="activity-card">
-            <h4>Activity Title</h4>
-            <p>Activity description goes here.</p>
-            <!-- Participants section -->
-            <div class="participants">
-              <h5>Participants</h5>
-              <ul>
-                <!-- Participant names will be dynamically inserted here -->
-              </ul>
-            </div>
-          </div>
+          <!-- Dynamically rendered activity cards will appear here -->
         </div>
       </section>
 
